fix: fix background cover on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ h1 {
         width: 100%;
         min-width: 100%;
         height: 800px;
-        background: url('../img/hero.jpg') no-repeat fixed;
+        background: url('../img/hero.jpg') fixed;
         background-position: 75% center;
         -webkit-background-size: 100%; 
         -moz-background-size: 100%; 
@@ -309,7 +309,7 @@ h1 {
         width: 100%;
         min-width: 100%;
         height: 800px;
-        background: url('../img/about-me.jpg') no-repeat fixed;
+        background: url('../img/about-me.jpg') fixed;
         background-position: 80% center;
         -webkit-background-size: 100%; 
         -moz-background-size: 100%; 
